--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,43 +1,21 @@
 <main>
-  <div>
-    <div class="heading">
-      <h1>About me</h1>
-      <p>learn about me, learn with me and learn for me</p>
-    </div>
+    <header class="title-logo">
+      <h1>👨🏽‍💻 About me</h1>
+    </header>
     <article>
       <h2>Who am I?</h2>
       <p>
-        I still got a lot to figure out but as of now I am a hobbist developer
-        located in kerala. I love coding. You might not know me but but It has
-        to be one of my favorite things to do. I'd love to make this into some
-        sort of a job. My start on coding was roblox studio and lua. Never
-        learnt a single thing about lua did it cause I thought it was fun.
-        Python was the first language I properly understood. In all honesty I
-        value performance and eligibilty over everything. Python is not the
-        "best" at performance but from my experiences I can conclude that you
-        can harvest alot of potential out of python if you tried hard enough.
-        Python is all fine and dandy but sooner or later I had to do something
-        else. I did dabble in C# before python but never got anywhere (still
-        haven't). I hit a huge burn out after alot of coding in python. Nearly
-        gave up on coding. But I recovered I tried new things, New languages
-        mostly web development and trying lower level languages (still am).
+        I am a 17 Year old from Kerala, Passionate about literature and poetry.
+        I play videogames sometimes, and I code too! I've been coding since
+        2019 and got my start in Roblox and Lua.
+        <br>
+        I love mathematics, It's one of if not my favorite subjects. My 
+        favorite mathematican has to be Leonhard Euler. His life is
+        of great inspiration for me. I consider mathematics and programming
+        to be an art just as poetry and literature. I think math is really
+        beautiful.
+        <br>
+        
       </p>
     </article>
-    <article>
-      <h2>How did I learned programming?</h2>
-      <p>
-        Curiosity played a big part in making me who I am now. It developed my
-        love for coding. Alot of experimention, Watching videos on youtube and
-        searching about the topic.
-      </p>
-      <ul>
-        <li>
-          <a href="www.w3schools.com">W3school</a> has played a huge part in
-          learning the basics
-        </li>
-        <li>A lot of <a href="www.youtube.com">youtube</a> helped too.</li>
-        <li>Just code. Seriously, coding random projects will help!</li>
-      </ul>
-    </article>
-  </div>
 </main>
