fix: make about a bit better

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,7 @@
             <figcaption><small>Stealthninja</small></figcaption>
         </figure>
         <small> written on <b><time datetime="2024-08-21">August 21, 2024</time></b> </small>
-    
+        <hr width="100%">
     </header>
     <article class="">
         <h2>brief life overview</h2>
@@ -36,7 +36,7 @@
             I also  participated in a <a href="https://www.pythondiscord.com/events/code-jams/10/">code jam</a> for python in which my team placed top 10! However 
             python was interpreted and according to speed nerds its too slow. Thus I moved on from python as my main programming language.
         </p>
-        <h3>C sharp? NO! I HAVE PRESCRIPTION GLASSES!</h3>
+        <h3>C sharp? No, I actually have myopia</h3>
         <p>While learning python. I took an interest in compiled languages. Especially the "C family" of languages. Used to be a big advocate for the C family
             what is the c family? <em>pfft..</em> Its the languages Inspired by C, and its familiars, They are usually compiled and statically typed,  languages like C, C++, C#, and <s>javascript</s>
             for a more exhaustic list check out the <a href="https://en.wikipedia.org/wiki/List_of_C-family_programming_languages"> wikipedia page</a>. Learning C# wasn't random,
@@ -44,7 +44,7 @@
         </p>
         <h3>C++, A more refined choice</h3>
         <p>After that whole fiasco, I've become a almost competent C++ developer, I am one of the maintainers of the Cpp algorithms repository
-            and have several projects in cpp including ones revolving around opengl
+            and have several projects in cpp including ones revolving around opengl.
         </p>
     </article>
 </section>
