--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,25 +1,31 @@
 section {
     color: white;
-
+    
+    padding: 0.5rem;
     display: flex;
     flex-direction: column;
     margin-inline: 1rem;
     margin-block: 1rem;
-    
-}
-
-header {
+    border: solid;
     background: linear-gradient(
     to bottom right,
     rgba(var(--midnight-violet), 0.8),
     rgba(var(--dark-violet), 0.8)
     );
-    border: solid;
-    padding: 0.5rem;
+    
 }
 
+
+h2 {
+    text-decoration: underline;
+}
 h3 {
     padding-block: 1rem;
+}
+
+h3::before {
+    content: "> ";
+    color: pink;
 }
 
 a {
@@ -28,20 +34,6 @@ a {
     text-decoration: underline;
 }
 
-.author {
-    margin: 0px;
-    display: flex;
-    align-items:center;
-    gap: 1rem;
-    background-color: rgba(var(--midnight-violet),0.8);
-    border-radius: 1rem;
-}
-
-figure > img {
-    width: 32px;
-    object-fit: cover;
-    border-radius: 1rem;
-} 
 
 @media screen and (min-width: 900px) {
     section {
