--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,8 +11,8 @@
         <small> written on <b><time datetime="2024-08-21">August 21, 2024</time></b> </small>
         <hr width="100%">
     </header>
-    <article class="">
-        <h2>brief life overview</h2>
+    <article>
+        <h2 id="overview">brief life overview</h2>
         <p>
             I am a {{ age }} year old hobbyist programmer from Kerala. Aside from computer science
             and mathematics I love poetry too! Some of my escapades include getting fourth place
@@ -20,29 +20,30 @@
             I've always been curious about video game development and have recently taken very small steps
             towards learning game development. I also like doing electronics repair, Haven't had any success 
             creating my own electronics <em>yet</em>
+
         </p>
-        <h2>Programming fascination</h2>
-        <h3>Young Lua</h3>
+        <h2 id="programming-fascination">Programming fascination</h2>
+        <h3 id="lua">Young Lua</h3>
         <p>
             At the age of 13, I found myself playing games on <a href="https://www.roblox.com">roblox</a> where there happened to be
             an active and thriving game development enviornment based on the <a href="https://create.roblox.com/docs/luau">luau</a> programming language.
             I found myself learning the ins and outs of lua. Although I didnt get that far, I did manage to work with a small group of programmers and did some
             work on a game. Then promptly  quit when my robox got stolen. <em>the humanity</em>
         </p>
-        <h3>To Python or not to python</h3>
+        <h3 id="python">To Python or not to python</h3>
         <p>
             After a small break, I decided a change of pace was needed; Learning a new programming language python, a dynamically typed, interpreted programming language.
             Python was easy, python was nice, python held your hand. It kept growing on me. I made alot of discord bots and other unfinished projects in python.
             I also  participated in a <a href="https://www.pythondiscord.com/events/code-jams/10/">code jam</a> for python in which my team placed top 10! However 
             python was interpreted and according to speed nerds its too slow. Thus I moved on from python as my main programming language.
         </p>
-        <h3>C sharp? No, I actually have myopia</h3>
+        <h3 id="csharp">C sharp? No, I actually have myopia</h3>
         <p>While learning python. I took an interest in compiled languages. Especially the "C family" of languages. Used to be a big advocate for the C family
             what is the c family? <em>pfft..</em> Its the languages Inspired by C, and its familiars, They are usually compiled and statically typed,  languages like C, C++, C#, and <s>javascript</s>
             for a more exhaustic list check out the <a href="https://en.wikipedia.org/wiki/List_of_C-family_programming_languages"> wikipedia page</a>. Learning C# wasn't random,
             it was delibrate if you can believe it. It was for a game engine called Unity. Unfortunately I didnt go far with C#
         </p>
-        <h3>C++, A more refined choice</h3>
+        <h3 id="cpp">C++, A more refined choice</h3>
         <p>After that whole fiasco, I've become a almost competent C++ developer, I am one of the maintainers of the Cpp algorithms repository
             and have several projects in cpp including ones revolving around opengl.
         </p>
