--- a/src/app/writing/blogs/my-time-at-gbot/my-time-at-gbot.component.css
+++ b/src/app/writing/blogs/my-time-at-gbot/my-time-at-gbot.component.css
@@ -1,4 +1,4 @@
-figure {
+.blog-img {
     border: solid;
     padding: 1rem;
     display: flex;
@@ -9,7 +9,7 @@ figure {
 }
 
 
-figcaption {
+.blog-img > figcaption {
     max-width: 23ch;
     border-top: solid;
     padding-top: 0.755rem;
