fix: update grand old oak

--- a/src/app/writing/poetry/a-grand-old-oak/a-grand-old-oak.component.html
+++ b/src/app/writing/poetry/a-grand-old-oak/a-grand-old-oak.component.html
@@ -2,29 +2,29 @@
     <h4>A grand old oak</h4>
 <pre>
 Unimaginative blurted the wise oak.
-No where to look or go... 
+No where to look or to go... 
 For this concrete jungle was it's home
 polluted, noisy and broke.
 
 This wise lion once king
-who ruled these vast lands, larger than ming.
-Emperor of green, no more with dead leaves.
+who ruled these lands larger than ming.
+Emperor of green, now with dead leaves.
 Branches left clinging, now and then creaks.
 
 Old and wise it's bark has only bites
-From saws, mills, plague or plight.
+From saws, mills, the plague or plight.
 The veridian grove grayed from it's nooks.
-salted with plastic was the water of the brook
+Plastic waters of the brook
 
 No more breaths left till grand roll.
-oxygen adored now in the poisionous fold
+oxygen adored in the poisionous fold
 of carbon, root of life no more
-the death duo pollutes the folk lore
+the death duo becomes the folk lore
 
 Lured to sleep, the grand oak felled.
-the last bastion of mother nature dealt
+the last bastion of mother nature with, dealt
 conqured by inhumane things
-it's grandious in nature still rings
+it's grandiour in nature, rings
 
 </pre>
 </section>
