--- a/src/app/writing/poetry/big-bright-star/big-bright-star.component.html
+++ b/src/app/writing/poetry/big-bright-star/big-bright-star.component.html
@@ -12,7 +12,7 @@ thought forever meant a long time
 Otherwise said the fading bright lime.
 
 I hope with dusk it will rise
-I hope i didn't strain it's eyes
+I hope I didn't strain it's eyes
 With me staring at the night sky
 Oh star, please just be fine
     </pre>
