--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,16 +8,18 @@
             <img src="assets/stealthninja.png" alt="a poorly drawn excuse for a ninja" >
             <figcaption><small>Stealthninja</small></figcaption>
         </figure>
-        <small> written on <b><time datetime="2024-08-21">August 21, 2024</time></b> </small>
+        <small> written on <b><time datetime="2024-08-21">August 21, 2024</time></b></small>
+        <br>
+        <small>Reading time: 2 mins</small>
         <hr width="100%">
     </header>
     <article>
         <h2 id="overview">brief life overview</h2>
         <p>
-            I am a {{ age }} year old hobbyist programmer from Kerala. Aside from computer science
-            and mathematics I love poetry too! Some of my escapades include getting fourth place
-            in a district level web design competetion in 10th grade. I've been programming since the age of 13.
-            I've always been curious about video game development and have recently taken very small steps
+            I am a {{ age }}-year-old hobbyist programmer from Kerala. Aside from computer science
+            and mathematics, I love poetry! Some of my escapades include getting fourth place
+            in a district-level web design competition in 10th grade. I've been programming since the age of 13.
+            I've always been curious about video game development and have recently taken small steps
             towards learning game development. I also like doing electronics repair, Haven't had any success 
             creating my own electronics <em>yet</em>
 
@@ -25,27 +27,28 @@
         <h2 id="programming-fascination">Programming fascination</h2>
         <h3 id="lua">Young Lua</h3>
         <p>
-            At the age of 13, I found myself playing games on <a href="https://www.roblox.com">roblox</a> where there happened to be
-            an active and thriving game development enviornment based on the <a href="https://create.roblox.com/docs/luau">luau</a> programming language.
-            I found myself learning the ins and outs of lua. Although I didnt get that far, I did manage to work with a small group of programmers and did some
-            work on a game. Then promptly  quit when my robox got stolen. <em>the humanity</em>
+            At the age of 13, I found myself playing games on <a href="https://www.roblox.com">Roblox</a> there happened to be
+            an active and thriving game development environment based on the <a href="https://create.roblox.com/docs/luau">luau</a> programming language.
+            I found myself learning the ins and outs of lua. Although I didn't get that far, I did manage to work with a small group of programmers and worked on a game. I then quit because my robox was stolen. <em>the humanity</em>
         </p>
-        <h3 id="python">To Python or not to python</h3>
+        <h3 id="python">To Python or not to Python</h3>
         <p>
-            After a small break, I decided a change of pace was needed; Learning a new programming language python, a dynamically typed, interpreted programming language.
-            Python was easy, python was nice, python held your hand. It kept growing on me. I made alot of discord bots and other unfinished projects in python.
-            I also  participated in a <a href="https://www.pythondiscord.com/events/code-jams/10/">code jam</a> for python in which my team placed top 10! However 
-            python was interpreted and according to speed nerds its too slow. Thus I moved on from python as my main programming language.
+            After a small break, I decided I wanted a change of pace; Learning a new programming language, Python, a dynamically typed, interpreted programming language.
+            Python was easy, Python was good, and Python held your hand. It kept growing on me. I made a lot of discord bots and other unfinished projects in it.
+            I also participated in a <a href="https://www.pythondiscord.com/events/code-jams/10/">code jam</a> for it, in which my team placed top 10! However, 
+            Python is an interpreted language. According to the speed nerds, it's too slow. Thus I moved on from Python as my preferred programming language.
         </p>
-        <h3 id="csharp">C sharp? No, I actually have myopia</h3>
-        <p>While learning python. I took an interest in compiled languages. Especially the "C family" of languages. Used to be a big advocate for the C family
-            what is the c family? <em>pfft..</em> Its the languages Inspired by C, and its familiars, They are usually compiled and statically typed,  languages like C, C++, C#, and <s>javascript</s>
-            for a more exhaustic list check out the <a href="https://en.wikipedia.org/wiki/List_of_C-family_programming_languages"> wikipedia page</a>. Learning C# wasn't random,
-            it was delibrate if you can believe it. It was for a game engine called Unity. Unfortunately I didnt go far with C#
+        <h3 id="csharp">C sharp? No, I have myopia</h3>
+        <p>
+            While learning Python. I took an interest in compiled languages. Especially the "C family" of languages. Used to be a big advocate for the C family
+            what is the c family? <em>pfft..</em> It's the languages Inspired by C and its familiars. They are usually compiled and statically typed, in languages like C, C++, C#, and <s>javascript</s>
+            for a more exhaustive list check out the <a href="https://en.wikipedia.org/wiki/List_of_C-family_programming_languages"> wikipedia page</a>. Learning C# wasn't random.
+            It was a deliberate choice if you can believe it. It was for a game engine called Unity. Unfortunately, I didn't go far with C#
         </p>
         <h3 id="cpp">C++, A more refined choice</h3>
-        <p>After that whole fiasco, I've become a almost competent C++ developer, I am one of the maintainers of the Cpp algorithms repository
-            and have several projects in cpp including ones revolving around opengl.
+        <p>
+            After that whole fiasco, I've become an almost competent C++ developer. I am one of the maintainers of the CPP algorithms repository
+            and have several projects in CPP, including ones revolving around OpenGL.
         </p>
     </article>
 </section>
