--- a/src/app/writing/blogs.component.html
+++ b/src/app/writing/blogs.component.html
@@ -1,16 +1,20 @@
 <main>
     <nav class="side-nav">
+        <section>
         <h5>Blogs</h5>
         <ul class="nav-items">
             <li><button routerLink="why-stealthy-dev">why stealthydev</button></li>
             <li><button routerLink="my-time-at-gbot">fascination with robotics</button></li>
         </ul>
+        </section>
+        <section>
         <h5>Poetry</h5>
         <ul class="nav-items">
             <li><button routerLink="a-grand-old-oak">Grand old oak</button></li>
             <li><button routerLink="big-bright-star">Big bright star</button></li>
             <li><button routerLink="house-on-a-hill">house on a hill</button></li>
         </ul>
+    </section>
     </nav>
     <router-outlet></router-outlet>
 </main>
