fix: add \<img\> to default component

--- a/src/app/writing/default/default.component.html
+++ b/src/app/writing/default/default.component.html
@@ -1,29 +1,42 @@
-<h1>writing</h1>
 <main>
-<h2>Blogs</h2>
-<section class="blog-grid">
-    <section class="blog-card">
-        <h3>Robotics</h3>
-    </section>
+    <header>
+        <h1>writing</h1>
+    </header>
 
-    <section class="blog-card">
-        <h3>why stealthy dev</h3>
-    </section>
-</section>
-<h2>Poetry</h2>
-<section class="blog-grid">
-    <section class="blog-card">
-        <h3>grand old oak</h3>
-    </section>
+    <h2>Blogs</h2>
+    <section class="blog-grid">
+        <section class="blog-card">
 
-    <section class="blog-card">
-        <h3>bright star</h3>
+            <img src="">
+            <h3>Robotics</h3>
+            <p>My experience with a robotics workshop</p>
+        </section>
+
+        <section class="blog-card">
+            <h3>why stealthy dev</h3>
+        </section>
     </section>
-    <section class="blog-card">
-        <h3>house on a hill</h3>
+    <h2>Poetry</h2>
+    <section class="blog-grid">
+        <section class="blog-card">
+            <img src="">
+            <h3>grand old oak</h3>
+        </section>
+
+        <section class="blog-card">
+
+            <img src="">
+            <h3>bright star</h3>
+        </section>
+        <section class="blog-card">
+
+            <img src="">
+            <h3>house on a hill</h3>
+        </section>
+        <section class="blog-card">
+
+            <img src="">
+            <h3>stars lake side</h3>
+        </section>
     </section>
-    <section class="blog-card">
-        <h3>stars lake side</h3>
-    </section>
-</section>
 </main>
